(CDAP-12907) Update JVM options for Java 8
- Remove usage of MaxPermSize everywhere
  - Useless in Java 8 but print a warning message on startup
- Use G1GC as the default GC